--- a/package.json
+++ b/package.json
@@ -15,17 +15,20 @@
   "dependencies": {
     "@types/adm-zip": "^0.4.32",
     "@types/mkdirp": "^0.5.2",
+    "@types/mysql": "^2.15.6",
     "adm-zip": "^0.4.13",
     "apexcharts": "^3.7.1",
     "core-js": "^2.6.5",
     "element-ui": "^2.4.5",
     "mkdirp": "^0.5.1",
+    "mysql": "^2.17.1",
     "objects-to-csv": "^1.2.1",
     "vue": "^2.6.10",
     "vue-apexcharts": "^1.3.5",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.1.0",
     "vue-router": "^3.0.3",
+    "vue-spinner": "^1.0.3",
     "vuechart": "^18.10.21",
     "vuex": "^3.0.1"
   },
